# C-Homework-4

./: README.md
assignment-4/: CMakeLists.txt  README.md  sieve-of-eratosthenes.cpp
